[package]
name = "mirage-tank-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint.workspace = true
mirage-tank.workspace = true
rfd.workspace = true
image.workspace = true

[build-dependencies]
slint-build.workspace = true
